fixed mobile css overlapping

--- a/style-mobile.css
+++ b/style-mobile.css
@@ -36,13 +36,12 @@ body {
     position: absolute;
     z-index: 3;
     color: black;
-
     width: 60px;
     height: 100%;
     left: 0px;
     top: 0px;
     transition: all 0.5s ease;
-    transition-property: opacity, transform;
+    transition-property: opacity, transform, width;
 }
 
 .wrapper-nav {
@@ -50,7 +49,7 @@ body {
     width: 100%;
     height: 100%;
     transition: all 0.5s ease;
-    transition-property: opacity, transform;
+    transition-property: opacity, transform, width;
     background-color: rgb(19, 19, 19);
     color: white;
     z-index: 2;
@@ -188,6 +187,7 @@ body {
     font-size: 35px;
     height: 100%;
     width: 100%;
+    overflow: hidden;
     writing-mode: vertical-rl;
     transform: rotateZ(180deg);
     text-align: center;
@@ -272,7 +272,7 @@ footer {
 .content {
     position: relative;
     box-sizing: border-box;
-    padding:0px 10px 0px 53px;
+    padding:0px 10px 0px 55px;
     width: 100%;
     height: 100%;
     min-height: 650px;
@@ -326,10 +326,18 @@ img {
 
 .show{
     opacity: 1;
+    width: 100%;
+    transform: translateX(0px);
+}
+
+.show60px{
+    opacity: 1;
+    width: 60px;
     transform: translateX(0px);
 }
 
 .hide{
     opacity: 0;
     transform: translateX(-325px);
+    width: 60px;
 }
